# usb_client

./: .gitignore  .gitmodules  LICENSE  README.md  build_protocol.sh
client_c/: CMakeLists.txt
client_c/include/: usb_device_handle.h  usb_protocol_client.h
client_c/src/: usb_device_handle.c  usb_protocol_client.c
client_py/: ipc_lock.py  usb_protocol.py
usb_protocol/: CMakeLists.txt
